--- a/src/components/churchValues/churchValues.css
+++ b/src/components/churchValues/churchValues.css
@@ -9,7 +9,7 @@
 }
 
 .church-values-container h2 {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .church-values-container h5 {
