--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  overflow: hidden;
 }
 
 html {
