--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,20 +1,9 @@
-#home {
-    display: grid;
-    grid-template-columns: 100%;
-    /* grid-template-areas:
-        "events events events posts"
-        "sermons groups faqs posts"
-    ; */
-    /* grid-template-columns: repeat(4, 1fr); */
-    /* grid-template-rows: 40% 60%; */
-    gap: 0.5rem;
-}
+#home {}
 
 .home-container {
     width: 100%;
     height: 100%;
     overflow-y: auto;
-    overflow-x: hidden;
 }
 
 .home-interactions-container {
@@ -32,4 +21,9 @@
     text-align: center;
     color: var(--color-primary);
     background-color: rgb(234, 234, 234);
+}
+
+.church-values-container p {
+    color: var(--color-bg-variant);
+    margin-bottom: 1rem;
 }
